# rsmtxmkt

./: Cargo.toml  README.md  pyproject.toml  scipy_test.py  usage.py
src/: basic.rs  lib.rs  main.rs  python_bindings.rs
