[package]
name = "rsmtxmkt"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5"
async-std = "1.10"      # For asynchronous file I/O
tokio = { version = "1", features = ["full"] }  # For asynchronous runtime
num_cpus = "1.13"
futures = "0.3.30"
memmap2 = "0.9.4"
bytemuck = "1.16.3"  # Check for the latest version
wgpu = "22.0.0"